@@ -8,7 +8,7 @@
  <property name="content_meta_type">Contact</property>
  <property name="product">egov.contactdirectory</property>
  <property name="factory">addContact</property>
- <property name="immediate_view">base_view</property>
+ <property name="immediate_view">contact_view</property>
  <property name="global_allow">True</property>
  <property name="filter_content_types">False</property>
  <property name="allowed_content_types"/>
@@ -16,7 +16,6 @@
  <property name="default_view">contact_view</property>
  <property name="view_methods">
   <element value="contact_view"/>
-  <element value="base_view"/>
  </property>
  <property name="default_view_fallback">False</property>
  <alias from="(Default)" to="(dynamic view)"/>
@@ -24,11 +23,11 @@
  <alias from="properties" to="base_metadata"/>
  <alias from="sharing" to="folder_localrole_form"/>
  <alias from="view" to="(selected layout)"/>
- 
+
  <action title="View" action_id="view" category="object" condition_expr="" url_expr="string:${object_url}/view" visible="True">
  <permission value="View"/>
  </action>
- 
+
  <action title="Edit" action_id="edit" category="object"
     condition_expr="not:object/@@plone_lock_info/is_locked_for_current_user"
     url_expr="string:${object_url}/edit" visible="True">
