@@ -1,0 +1,11 @@
+<?xml version="1.0"?>
+<object name="Contact"
+        meta_type="Factory-based Type Information with dynamic views"
+        i18n:domain="egov.contactdirectory" xmlns:i18n="http://xml.zope.org/namespaces/i18n">
+
+    <property name="immediate_view">contact_view</property>
+    <property name="view_methods">
+        <element value="contact_view"/>
+    </property>
+
+</object>
