@@ -5,6 +5,9 @@ Changelog
 1.3.3 (unreleased)
 ------------------
 
+- Remove base_view from allowed Contact views.
+  [jone]
+
 - Add English translations.
   [jone]
 
